--- a/css/ofertas.css
+++ b/css/ofertas.css
@@ -90,7 +90,17 @@ button:hover {
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.18);
 }
 
+h2 {
+  display: flex;
+  justify-content: center;
+  width: 60%;
+  max-width: 1200px;
+  margin: 50px auto;
+  font-size: 30px;
+}
+
 .ofertas {
+  display: flex;
   width: 60%;
   max-width: 1200px;
   margin: 50px auto;
@@ -199,7 +209,7 @@ button:hover {
   border-radius: 12px;
   padding: 2rem;
   max-width: 600px;
-  width: 80%;
+  width: 30%;
   text-align: center;
 }
 
@@ -239,16 +249,52 @@ button:hover {
 }
 
 
-footer {
+.footer {
   background-color: #333;
-  color: white;
+  width: 100%;
+  color: #fff;
+  padding: 30px 0;
   text-align: center;
-  padding: 20px 0;
-  font-size: 1rem;
+  font-family: 'Poppins', sans-serif;
 }
 
-footer p {
-  margin: 0;
+.footer p {
+  font-size: 1rem;
+  margin: 10px 0;
+}
+
+.footer a {
+  color: #fff;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.footer a:hover {
+  color: #e55340;
+}
+
+.footer .social-media {
+  margin-top: 20px;
+}
+
+.footer .social-media a {
+  margin: 0 15px;
+  font-size: 1.2rem;
+}
+
+.footer .social-media a:hover {
+  color: #e55340;
+}
+
+@media (max-width: 768px) {
+  .footer {
+    padding: 20px 0;
+  }
+
+  .footer .social-media a {
+    margin: 0 10px;
+    font-size: 1.1rem;
+  }
 }
 
 @media (max-width: 768px) {
@@ -261,5 +307,347 @@ footer p {
     flex: 1 1 100%;
     max-width: 100%;
     margin-bottom: 20px;
+  }
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
+  background-color: #f4f4f4;
+  color: #333;
+  line-height: 1.6;
+}
+
+header {
+  background-color: #D8D8D8;
+  padding: 20px 0;
+  color: #e74c3c;
+  width: 100%;
+}
+
+.header-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.logo h1 {
+  font-size: 2rem;
+  font-family: 'Arial', sans-serif;
+  margin: 0;
+  animation: slideUp 0.6s ease-out;
+}
+
+.hero {
+  width: 100%;
+  height: 100vh;
+  background: url('../assets/img-header.jpg') no-repeat center center/cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+  animation: fadeIn 1.2s ease-out;
+}
+
+.hero::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  filter: blur(5px);
+  z-index: 1;
+}
+
+.hero-text {
+  z-index: 2;
+  animation: slideUp 0.8s ease-out;
+}
+
+.hero-text h1 {
+  font-size: 3rem;
+  margin-bottom: 20px;
+}
+
+.hero-text p {
+  font-size: 1.5rem;
+  margin: 20px 0;
+}
+
+button {
+  padding: 10px 20px;
+  background-color: #e74c3c;
+  color: white;
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 600;
+  margin-top: 1rem;
+  transition: all 0.3s ease;
+  animation: fadeIn 1s ease-out;
+}
+
+button:hover {
+  background-color: #d35c3f;
+  transform: translateY(-4px);
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.18);
+}
+
+h2 {
+  display: flex;
+  justify-content: center;
+  width: 60%;
+  max-width: 1200px;
+  margin: 50px auto;
+  font-size: 30px;
+  animation: slideUp 0.8s ease-out;
+}
+
+.ofertas {
+  display: flex;
+  width: 60%;
+  max-width: 1200px;
+  margin: 50px auto;
+  padding: 40px;
+  background-color: #fff;
+  border-radius: 15px;
+  box-shadow: 0 6px 35px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  animation: fadeIn 1s ease-out;
+}
+
+.oferta-item {
+  background-color: #ffffff;
+  border-radius: 12px;
+  box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  overflow: hidden;
+  padding: 1rem;
+  text-align: center;
+  animation: slideUp 0.6s ease-out;
+}
+
+.oferta-item:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+}
+
+.oferta-item img {
+  width: 100%;
+  height: auto;
+  display: block;
+  border-bottom: 1px solid #ddd;
+}
+
+.oferta-item h3 {
+  font-size: 1.5rem;
+  margin-top: 1rem;
+  color: #333;
+}
+
+.oferta-item p {
+  font-size: 1rem;
+  color: #666;
+  margin: 0.5rem 0;
+}
+
+.price {
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #28a745;
+}
+
+.availability {
+  font-size: 0.9rem;
+  color: #555;
+}
+
+.rating {
+  margin: 1rem 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.rating span {
+  font-size: 1.5rem;
+  color: #f4b400;
+}
+
+.rating p {
+  font-size: 0.9rem;
+  color: #777;
+}
+
+button {
+  padding: 10px 20px;
+  background-color: #e74c3c;
+  color: white;
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 600;
+  margin-top: 1rem;
+  transition: all 0.3s ease;
+  animation: fadeIn 1s ease-out;
+}
+
+button:hover {
+  background-color: #d35c3f;
+  transform: translateY(-4px);
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.18);
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+  animation: fadeIn 1.2s ease-out;
+}
+
+.modal-content {
+  background-color: #ffffff;
+  border-radius: 12px;
+  padding: 2rem;
+  max-width: 600px;
+  width: 30%;
+  text-align: center;
+  animation: slideUp 0.8s ease-out;
+}
+
+.close-modal {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  font-size: 2rem;
+  color: #333;
+  cursor: pointer;
+}
+
+.close-modal:hover {
+  color: #e74c3c;
+}
+
+.modal img {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+
+.modal h2 {
+  margin-top: 1rem;
+  font-size: 1.8rem;
+}
+
+.modal p {
+  margin: 1rem 0;
+  color: #666;
+}
+
+.modal .price {
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #28a745;
+}
+
+.footer {
+  background-color: #333;
+  width: 100%;
+  color: #fff;
+  padding: 30px 0;
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
+  animation: fadeIn 1s ease-out;
+}
+
+.footer p {
+  font-size: 1rem;
+  margin: 10px 0;
+}
+
+.footer a {
+  color: #fff;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.footer a:hover {
+  color: #e55340;
+}
+
+.footer .social-media {
+  margin-top: 20px;
+}
+
+.footer .social-media a {
+  margin: 0 15px;
+  font-size: 1.2rem;
+}
+
+.footer .social-media a:hover {
+  color: #e55340;
+}
+
+@media (max-width: 768px) {
+  .footer {
+    padding: 20px 0;
+  }
+
+  .footer .social-media a {
+    margin: 0 10px;
+    font-size: 1.1rem;
+  }
+
+  .ofertas-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .oferta-item {
+    flex: 1 1 100%;
+    max-width: 100%;
+    margin-bottom: 20px;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes slideUp {
+  0% {
+    transform: translateY(40px);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateY(0);
+    opacity: 1;
   }
 }
